--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
 certifi==2019.9.11
+cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 entrypoints==0.3
@@ -14,22 +15,27 @@ Jinja2==2.10.3
 jsonschema==3.1.1
 jupyter-client==5.3.4
 jupyter-core==4.6.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.2
 mistune==0.8.4
 more-itertools==7.2.0
 nbconvert==5.6.1
 nbformat==4.4.0
 nltk==3.4.5
 notebook==6.0.2
+numpy==1.17.4
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+Pillow==6.2.1
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
 pyenchant==2.0.0
 Pygments==2.4.2
+pyparsing==2.4.5
 pyrsistent==0.15.4
 python-dateutil==2.8.1
 pyzmq==18.1.0
@@ -37,6 +43,8 @@ Send2Trash==1.5.0
 six==1.13.0
 terminado==0.8.2
 testpath==0.4.2
+torch==1.3.1
+torchvision==0.4.2
 tornado==6.0.3
 traitlets==4.3.3
 translate-toolkit==2.4.0
